--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %>
     <!-- banner -->
-    <div class="bg-cover bg-no-repeat bg-center py-36 relative" style="background-image: url('images/banner-bg.jpg')">
+    <div class="bg-cover bg-no-repeat bg-center py-20 md:py-36 relative" style="background-image: url('images/banner-bg.jpg')">
         <div class="container">
             <!-- banner content -->
             <h1 class="md:text-5xl text-4xl text-gray-800 font-medium mb-4">
@@ -40,7 +40,7 @@
                 <img src="images/icons/delivery-van.svg" class="lg:w-12 w-10 h-12 object-contain">
                 <div>
                     <h4 class="font-medium capitalize text-lg">free shipping</h4>
-                    <p class="text-gray-500 text-xs lg:text-sm">Order over $200</p>
+                    <p class="text-gray-500 text-xs lg:text-sm">Order over ₹200</p>
                 </div>
             </div>
             <!-- single feature end -->
@@ -162,8 +162,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -205,8 +205,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -248,8 +248,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -292,8 +292,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -354,8 +354,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -397,8 +397,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -441,8 +441,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
@@ -485,8 +485,8 @@
                         </h4>
                     </a>
                     <div class="flex items-baseline mb-1 space-x-2">
-                        <p class="text-xl text-primary font-roboto font-semibold">$45.00</p>
-                        <p class="text-sm text-gray-400 font-roboto line-through">$55.00</p>
+                        <p class="text-xl text-primary font-roboto font-semibold">₹45.00</p>
+                        <p class="text-sm text-gray-400 font-roboto line-through">₹55.00</p>
                     </div>
                     <div class="flex items-center">
                         <div class="flex gap-1 text-sm text-yellow-400">
