--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XYZ</title>
+    <title>Atheera</title>
+    <link rel="icon" type="image/png" href="/images/icons/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
@@ -14,28 +15,19 @@
 
 <body>   
    <!-- header -->
-    <header class="py-4 shadow-sm bg-pink-100 lg:bg-white">
+    <header class="py-4 shadow-sm bg-white">
         <div class="container flex items-center justify-between">
             <!-- logo -->
-            <a href="#" class="block w-32">
-                 <h1 class="text-2xl font-bold text-primary">Atheera</h1>
+            <a href="#" class="w-32 flex gap-2">
+                <img class="rounded-sm w-[55px] md:w-[60px]" src="/images/icons/favicon.png" alt="">
+                 <!-- <h1 class="text-2xl font-bold text-primary">Atheera</h1> -->
             </a>
             <!-- logo end -->
-
             <!-- navicons -->
             <div class="space-x-4 flex items-center">
-                <a href="wishlist.html" class="block text-center text-gray-700 hover:text-primary transition relative">
-                    <span
-                        class="absolute -right-0 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">5</span>
-                    <div class="text-2xl">
-                        <i class="far fa-heart"></i>
-                    </div>
-                    <div class="text-xs leading-3">Wish List</div>
-                </a>
-                <a href="cart.html"
+                <a href="/account/cart"
                     class="lg:block text-center text-gray-700 hover:text-primary transition hidden relative">
-                    <span
-                        class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs"><%= 23 %></span>
+                    <!-- <span class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs"><%= 23 %></span> -->
                     <div class="text-2xl">
                         <i class="fas fa-shopping-bag"></i>
                     </div>
@@ -122,9 +114,8 @@
             </div>
             <div class="text-xs leading-3">Category</div>
         </a>
-        <a href="cart.html" class="text-center text-gray-700 hover:text-primary transition relative">
-            <span
-                class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">3</span>
+        <a href="/account/cart" class="text-center text-gray-700 hover:text-primary transition relative">
+            <!-- <span class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">3</span> -->
             <div class="text-2xl">
                 <i class="fas fa-shopping-bag"></i>
             </div>
