--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,15 +11,15 @@
             </p>
             <!-- banner button -->
             <div class="mt-12 flex flex-wrap gap-3">
-                <a href="/account/shop?category=clothing" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
+                <a href="/products/shop?category=clothing" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
                hover:text-primary transition">
                     Clothing
                 </a>
-                <a href="/account/shop?category=gold" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
+                <a href="/products/shop?category=gold" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
                hover:text-primary transition">
                     Gold
                 </a>
-                <a href="/account/shop?category=diamond" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
+                <a href="/products/shop?category=diamond" class="bg-primary border border-primary text-white mx-2 px-8 py-3 font-medium rounded-md uppercase hover:bg-transparent
                hover:text-primary transition">
                     Diamond
                 </a>
