--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
             <!-- logo end -->
             <!-- navicons -->
             <div class="space-x-4 flex items-center">
-                <a href="/account/cart"
+                <a href="/products/cart"
                     class="lg:block text-center text-gray-700 hover:text-primary transition hidden relative">
                     <!-- <span class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs"><%= 23 %></span> -->
                     <div class="text-2xl">
@@ -33,7 +33,7 @@
                     </div>
                     <div class="text-xs leading-3">Cart</div>
                 </a>
-                <a href="account.html" class="block text-center text-gray-700 hover:text-primary transition">
+                <a href="/account" class="block text-center text-gray-700 hover:text-primary transition">
                     <div class="text-2xl">
                         <i class="far fa-user"></i>
                     </div>
@@ -59,19 +59,19 @@
 
                     <div class="absolute left-0 top-full w-full bg-white shadow-md py-3 invisible opacity-0 group-hover:opacity-100 group-hover:visible transition duration-300 z-50 divide-y divide-gray-300 divide-dashed">
                         <!-- single category -->
-                        <a href="/account/shop?category=clothing" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
+                        <a href="/products/shop?category=clothing" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
                             <img src="images/icons/bed.svg" class="w-5 h-5 object-contain">
                             <span class="ml-6 text-gray-600 text-sm">Clothing</span>
                         </a>
                         <!-- single category end -->
                         <!-- single category -->
-                        <a href="/account/shop?category=gold" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
+                        <a href="/products/shop?category=gold" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
                             <img src="images/icons/sofa.svg" class="w-5 h-5 object-contain">
                             <span class="ml-6 text-gray-600 text-sm">Gold</span>
                         </a>
                         <!-- single category end -->
                         <!-- single category -->
-                        <a href="/account/shop?category=diamond" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
+                        <a href="/products/shop?category=diamond" class="px-6 py-3 flex items-center hover:bg-gray-100 transition">
                             <img src="images/icons/office.svg" class="w-5 h-5 object-contain">
                             <span class="ml-6 text-gray-600 text-sm">Diamond</span>
                         </a>
@@ -84,7 +84,7 @@
                 <div class="flex items-center justify-between flex-grow pl-12">
                     <div class="flex items-center space-x-6 text-base capitalize">
                         <a href="/" class="text-gray-200 hover:text-white transition">Home</a>
-                        <a href="/account/shop" class="text-gray-200 hover:text-white transition">Shop</a>
+                        <a href="/products/shop" class="text-gray-200 hover:text-white transition">Shop</a>
                         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
                         <a href="#" class="text-gray-200 hover:text-white transition">Contacts</a>
                     </div>
@@ -114,7 +114,7 @@
             </div>
             <div class="text-xs leading-3">Category</div>
         </a>
-        <a href="/account/cart" class="text-center text-gray-700 hover:text-primary transition relative">
+        <a href="/products/cart" class="text-center text-gray-700 hover:text-primary transition relative">
             <!-- <span class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">3</span> -->
             <div class="text-2xl">
                 <i class="fas fa-shopping-bag"></i>
@@ -137,7 +137,7 @@
                 <a href="/" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
                     Home
                 </a>
-                <a href="/account/shop" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
+                <a href="/products/shop" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
                     Shop
                 </a>
                 <a href="#" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
@@ -162,13 +162,13 @@
             <!-- navlink -->
             <h3 class="text-xl font-semibold text-gray-700 mb-1 font-roboto pl-4 pt-4">Categories</h3>
             <div class="">
-                <a href="/account/shop?category=clothing" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
+                <a href="/products/shop?category=clothing" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
                     Clothing
                 </a>
-                <a href="/account/shop?category=gold" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
+                <a href="/products/shop?category=gold" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
                     Gold
                 </a>
-                <a href="/account/shop?category=diamond" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
+                <a href="/products/shop?category=diamond" class="block px-4 py-2 font-medium transition hover:bg-gray-100">
                     Diamond
                 </a>
             </div>
