--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -83,6 +83,17 @@
                     </a>
                 </div>
                 <!-- single link end -->
+                <!-- single link -->
+                <div class="space-y-1 pl-8 pt-4">
+                    <a href="/user/logout" 
+                        class="relative text-base font-medium capitalize hover:text-red-600 transition block text-red-600">
+                        Logout
+                        <span class="absolute -left-8 top-0 text-base">
+                            <i class="far fa-address-card"></i>
+                        </span>
+                    </a>
+                </div>
+                <!-- single link end -->
             </div>
             <!-- profile links end -->
         </div>
