--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
                     </div>
                     <div class="text-xs leading-3">Cart</div>
                 </a>
-                <a href="/account" class="block text-center text-gray-700 hover:text-primary transition">
+                <a href="/user/login-page" class="block text-center text-gray-700 hover:text-primary transition">
                     <div class="text-2xl">
                         <i class="far fa-user"></i>
                     </div>
@@ -88,9 +88,18 @@
                         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
                         <a href="#" class="text-gray-200 hover:text-white transition">Contacts</a>
                     </div>
-                    <a href="login.html" class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
-                        Login/Register
-                    </a>
+
+                    <div class="flex items-center gap-4">
+                            <a class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
+                                NAME                            
+                            </a>
+                            <a href="/user/login-page" class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
+                                SignIn/Login
+                            </a>
+                        <a href="/user/logout" class="ml-auto justify-self-end text-red-500 hover:text-red-500 transition">
+                            Logout
+                        </a>
+                    </div>
                 </div>
                 <!-- nav menu end -->
 
