--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -13,27 +13,10 @@
                         <a><i id="close-icon" class="fas fa-times"></i></a>
                     </div>
                     <h3 class="text-2xl text-primary mb-3 uppercase font-bold"><%= category %></h3>
-                    <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">Categories</h3>
-                    <div class="space-y-2">
-                        <!-- single category -->
-                        <div class="flex items-center">
-                            <input type="checkbox" id="Bedroom"
-                                class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                            <label for="Bedroom" class="text-gray-600 ml-3 cursor-pointer">Saree</label>
-                            <div class="ml-auto text-gray-600 text-sm">(15)</div>
-                        </div>
-                        <!-- single category end -->
-                        <!-- single category -->
-                        <div class="flex items-center">
-                            <input type="checkbox" id="Sofa"
-                                class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                            <label for="Sofa" class="text-gray-600 ml-3 cursor-pointer">Suit</label>
-                            <div class="ml-auto text-gray-600 text-sm">(05)</div>
-                        </div>
-                        <!-- single category end -->
-                    </div>
+                    <h1>Shop - <span class="uppercase"><%= category || "All Categories" %></span></h1>
                 </div>
                 <!-- category filter end -->
+
                 <!-- sub-category filter -->
                 <div class="pt-4">
                     <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">Sub-Categories</h3>
@@ -46,30 +29,7 @@
                             <div class="ml-auto text-gray-600 text-sm">(15)</div>
                         </div>
                         <!-- single sub-category name end -->
-                        <!-- single sub-category name -->
-                        <div class="flex items-center">
-                            <input type="checkbox" id="Karl"
-                                class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                            <label for="Karl" class="text-gray-600 ml-3 cursor-pointer">Karl</label>
-                            <div class="ml-auto text-gray-600 text-sm">(18)</div>
-                        </div>
-                        <!-- single sub-category name end -->
-                        <!-- single sub-category name -->
-                        <div class="flex items-center">
-                            <input type="checkbox" id="Maxing"
-                                class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                            <label for="Maxing" class="text-gray-600 ml-3 cursor-pointer">Maxing</label>
-                            <div class="ml-auto text-gray-600 text-sm">(09)</div>
-                        </div>
-                        <!-- single sub-category name end -->
-                        <!-- single sub-category name -->
-                        <div class="flex items-center">
-                            <input type="checkbox" id="Ernest"
-                                class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                            <label for="Ernest" class="text-gray-600 ml-3 cursor-pointer">Ernest</label>
-                            <div class="ml-auto text-gray-600 text-sm">(12)</div>
-                        </div>
-                        <!-- single sub-category name end -->
+
                     </div>
                 </div>
                 <!-- sub-category filter end -->
