--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -90,11 +90,8 @@
                     </div>
 
                     <div class="flex items-center gap-4">
-                            <a class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
-                                NAME                            
-                            </a>
                             <a href="/user/login-page" class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
-                                SignIn/Login
+                                Register
                             </a>
                         <a href="/user/logout" class="ml-auto justify-self-end text-red-500 hover:text-red-500 transition">
                             Logout
