--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -14,6 +14,7 @@
 
             <!-- shipping carts -->
             <div class="space-y-4">
+                <% user.cart.reverse().forEach(function(product){ %>
                 <!-- single cart -->
                 <div
                     class="flex items-center md:justify-between gap-4 md:gap-6 p-4 border border-gray-200 rounded flex-wrap md:flex-nowrap">
@@ -25,10 +26,10 @@
                     <!-- cart content -->
                     <div class="md:w-1/3 w-full">
                         <h2 class="text-gray-800 mb-3 xl:text-xl textl-lg font-medium uppercase">
-                            Italian L Shape Sofa
+                            <%= product.title %>
                         </h2>
-                        <p class="text-primary font-semibold">₹45.00</p>
-                        <p class="text-gray-500">Size: M</p>
+                        <p class="text-primary font-semibold">₹<%= product.price %></p>
+                        <p class="text-gray-500">Size: <%= product.size %></p>
                     </div>
                     <!-- cart content end -->
                     <!-- cart quantity -->
@@ -46,38 +47,7 @@
                     </div>
                 </div>
                 <!-- single cart end -->
-                <!-- single cart -->
-                <div
-                    class="flex items-center md:justify-between gap-4 md:gap-6 p-4 border border-gray-200 rounded flex-wrap md:flex-nowrap">
-                    <!-- cart image -->
-                    <div class="w-32 flex-shrink-0">
-                        <img src="/images/products/product9.jpg" class="w-full">
-                    </div>
-                    <!-- cart image end -->
-                    <!-- cart content -->
-                    <div class="md:w-1/3 w-full">
-                        <h2 class="text-gray-800 mb-3 xl:text-xl textl-lg font-medium uppercase">
-                            Italian L Shape Sofa
-                        </h2>
-                        <p class="text-primary font-semibold">₹45.00</p>
-                        <p class="text-gray-500">Size: M</p>
-                    </div>
-                    <!-- cart content end -->
-                    <!-- cart quantity -->
-                    <div class="flex border border-gray-300 text-gray-600 divide-x divide-gray-300">
-                        <div class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">-</div>
-                        <div class="h-8 w-10 flex items-center justify-center">4</div>
-                        <div class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">+</div>
-                    </div>
-                    <!-- cart quantity end -->
-                    <div class="ml-auto md:ml-0">
-                        <p class="text-primary text-lg font-semibold">₹320.00</p>
-                    </div>
-                    <div class="text-gray-600 hover:text-primary cursor-pointer">
-                        <i class="fas fa-trash"></i>
-                    </div>
-                </div>
-                <!-- single cart end -->
+                <% }) %>
             </div>
             <!-- shipping carts end -->
         </div>
